# fruitroll

./: CMakeLists.txt  README.md
.cache/clangd/index/: args.cpp.9AC282FB39F9DCCC.idx  args.hpp.BA5FC2B6A9238D17.idx  fruit.cpp.4330AE542391232B.idx  fruit.hpp.8640B7DE09A1F2F9.idx  jackpot.cpp.31943D1F246AA05D.idx  jackpot.hpp.183608AB03FE41DD.idx  main.cpp.5FD59857F640D029.idx  roll.cpp.E4340E3CADF63320.idx  roll.hpp.1F3F29F42E21F515.idx
include/: args.hpp  fruit.hpp  jackpot.hpp  roll.hpp
src/: args.cpp  fruit.cpp  jackpot.cpp  main.cpp  roll.cpp
