cmake_minimum_required(VERSION 3.12)
project(fruitroll)


set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

include_directories(${PROJECT_NAME} ${PROJECT_SOURCE_DIR}/include/)
file(GLOB SOURCES ${PROJECT_SOURCE_DIR}/src/**.cpp)

add_executable(${PROJECT_NAME} ${SOURCES})
set_target_properties(${PROJECT_NAME} PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/build/)

